# gpt_server

./: Cargo.toml  config.json
src/: config.rs  email.rs  gpt_api.rs  main.rs
